# logicaldecoding

./: .env  Cargo.toml  Cargo.toml-old  Dockerfile  docker-compose.yaml
daro/: Cargo.toml
daro/examples/: t1.rs
daro/src/: lib.rs  log.rs  main.rs
daro/src/app/: app.rs  config.rs  err.rs  help.rs  mod.rs
daro/src/arg/: arg.rs  err.rs  file_search.rs  help.rs  mod.rs
daro/src_old/: lib.rs  replication.rs
dymod/: Cargo.toml
dymod/src/: dymod.rs  dymod_2.rs  dymod_error.rs  dymod_source.rs  lib.rs  lock.rs
examples/: t1.rs
plugins/one/: Cargo.toml
plugins/one/src/: lib.rs
src/: ch_connect.rs  error.rs  lib.rs  main.rs  main_old.rs  model.rs  pg_connect.rs  replication.rs  shutdown.rs
src/app/: app.rs  config.rs  err.rs  help.rs  mod.rs
src/arg/: arg.rs  mod.rs
src/types/: mod.rs
src_old/: cancelable.rs  ch_connect.rs  convert.rs  model.rs  pg_connect.rs
