[package]
name = "daro"
version = "0.1.0"
edition = "2021"


[dependencies]
env_logger = "0.11.3"
anyhow = "1.0.66"
tracing = "0.1.37"
log = "0.4"
ctrlc = "3.4.0"
signal-hook = {version = "0.3.17", features = ["extended-siginfo"] }
confy = "0.6.0"
toml = "0.8.8"
anstyle = "1.0.4"
serde_derive = "1"
serde = { version = "1", features = [ "derive" ] }
serde_yaml = "0.9.30"
serde_json = "1"
clap = { version = "4.4.13", features = [
    "derive",
    "color",
    "env",
    "help",
    "suggestions",
] }
clap-serde-derive = "0.2.1"
dynamic_reload = "0.10.0"
regex = "1.10.4"
libloading = { version = "0.8.3", optional = true }

postgres-types = { git = "https://github.com/MaterializeInc/rust-postgres" }
postgres = { git = "https://github.com/MaterializeInc/rust-postgres" }
postgres-protocol = { git = "https://github.com/MaterializeInc/rust-postgres" }
tokio-postgres = { git = "https://github.com/MaterializeInc/rust-postgres" }

clickhouse-rs = { path = "/Users/solomatovs/Documents/GitHub/clickhouse-rs", features = ["tls"] }

dymod = { path = "../dymod" }

[dev-dependencies]
rand = "0.8.5"
